--- a/resource-overlay/liber/Settings/res/values/config.xml
+++ b/resource-overlay/liber/Settings/res/values/config.xml
@@ -13,4 +13,10 @@
     -->
     <integer name="config_fingerprintSensorLocation">0</integer>
 
+    <!-- Battery health -->
+    <bool name="config_supportBatteryHealth">true</bool>
+    <string name="config_batteryCalculatedCapacity">/sys/class/power_supply/bms/charge_full</string>
+    <string name="config_batteryDesignCapacity">/sys/class/power_supply/bms/charge_full_design</string>
+    <string name="config_batteryChargeCycles">/sys/class/power_supply/bms/cycle_count</string>
+
 </resources>
